--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body id ='index'>
+    <div class = "container">
+            <input type="text" class = "email" placeholder="example@gmail.com"> <br>
+           <input type="text" class = "password" placeholder = "password123*"><br>
+           <button class = "sign-up button">Sign-Up</button>
+ 
+
+
+
+
+
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
