--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class = "container">
             <input type="text" class = "email" placeholder="example@gmail.com"> <br>
            <input type="text" class = "password" placeholder = "password123*"><br>
-           <button class = "sign-up button">Sign-Up</button>
+           <button id = "button">Login</button>
  
 
 
