--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body id ='index'>
     <div class = "container">
-            <input type="text" class = "email" placeholder="example@gmail.com"> <br>
-           <input type="text" class = "password" placeholder = "password123*"><br>
-           <button id = "button">Login</button>
- 
+       
+        <div class = "small-container">
+            <form action="">
+                <input type="text" class = "email" placeholder="example@gmail.com" required> <br>
+                <input type="text" class = "password" placeholder = "password123*" required><br>
+                <button id = "button">Login</button>
+            </form>
+        </div>
 
-
-
-
-
+        
     </div>
 
     <script src="script.js"></script>
